--- a/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
+++ b/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
@@ -87,7 +87,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlobTool.cs" />
+    <Compile Include="BlobToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BlobToolControl.Designer.cs">
+      <DependentUpon>BlobToolControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="CaliperTool.cs" />
+    <Compile Include="CaliperToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CaliperToolControl.Designer.cs">
+      <DependentUpon>CaliperToolControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DisplayControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DisplayControl.Designer.cs">
+      <DependentUpon>DisplayControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +116,12 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="HistogramTool.cs" />
+    <Compile Include="HistogramToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="HistogramToolControl.Designer.cs">
+      <DependentUpon>HistogramToolControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ROI.cs">
@@ -106,8 +130,26 @@
     <Compile Include="ROI.Designer.cs">
       <DependentUpon>ROI.cs</DependentUpon>
     </Compile>
+    <Compile Include="ToolWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ToolWindow.Designer.cs">
+      <DependentUpon>ToolWindow.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="BlobToolControl.resx">
+      <DependentUpon>BlobToolControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CaliperToolControl.resx">
+      <DependentUpon>CaliperToolControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DisplayControl.resx">
+      <DependentUpon>DisplayControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HistogramToolControl.resx">
+      <DependentUpon>HistogramToolControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -120,6 +162,9 @@
     </Compile>
     <EmbeddedResource Include="ROI.resx">
       <DependentUpon>ROI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ToolWindow.resx">
+      <DependentUpon>ToolWindow.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
