--- a/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
+++ b/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{25082A66-EF32-41A9-80DA-77111B284911}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>OpenCV___Vision_Pro</RootNamespace>
+    <RootNamespace>OpenCV_Vision_Pro</RootNamespace>
     <AssemblyName>OpenCV - Vision Pro</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -53,9 +53,6 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Emgu.CV, Version=4.7.0.5276, Culture=neutral, PublicKeyToken=7281126722ab4438, processorArchitecture=MSIL">
-      <HintPath>..\packages\Emgu.CV.4.7.0.5276\lib\netstandard2.0\Emgu.CV.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -86,18 +83,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BlobTool.cs" />
-    <Compile Include="BlobToolControl.cs">
+    <Compile Include="DataContainer\AutoDisposeDict.cs" />
+    <Compile Include="DataContainer\AutoDisposeList.cs" />
+    <Compile Include="Blob\BlobTool.cs" />
+    <Compile Include="Blob\BlobToolControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="BlobToolControl.Designer.cs">
+    <Compile Include="Blob\BlobToolControl.Designer.cs">
       <DependentUpon>BlobToolControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="CaliperTool.cs" />
-    <Compile Include="CaliperToolControl.cs">
+    <Compile Include="Caliper\CaliperTool.cs" />
+    <Compile Include="Caliper\CaliperToolControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CaliperToolControl.Designer.cs">
+    <Compile Include="Caliper\CaliperToolControl.Designer.cs">
       <DependentUpon>CaliperToolControl.cs</DependentUpon>
     </Compile>
     <Compile Include="DisplayControl.cs">
@@ -112,35 +111,40 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrameControl.cs">
+    <Compile Include="Interface\IParams.cs" />
+    <Compile Include="ROI\FrameControl.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="HistogramTool.cs" />
-    <Compile Include="HistogramToolControl.cs">
+    <Compile Include="Histogram\HistogramTool.cs" />
+    <Compile Include="Histogram\HistogramToolControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="HistogramToolControl.Designer.cs">
+    <Compile Include="Histogram\HistogramToolControl.Designer.cs">
       <DependentUpon>HistogramToolControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ROI.cs">
+    <Compile Include="ROI\ROI.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ROI.Designer.cs">
+    <Compile Include="ROI\ROI.Designer.cs">
       <DependentUpon>ROI.cs</DependentUpon>
     </Compile>
-    <Compile Include="ToolsClass.cs" />
+    <Compile Include="Interface\ToolBase.cs" />
     <Compile Include="ToolWindow.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ToolWindow.Designer.cs">
       <DependentUpon>ToolWindow.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="BlobToolControl.resx">
+    <Compile Include="Interface\UserControlBase.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <EmbeddedResource Include="Blob\BlobToolControl.resx">
       <DependentUpon>BlobToolControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="CaliperToolControl.resx">
+    <EmbeddedResource Include="Caliper\CaliperToolControl.resx">
       <DependentUpon>CaliperToolControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DisplayControl.resx">
@@ -149,8 +153,11 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HistogramToolControl.resx">
+    <EmbeddedResource Include="Histogram\HistogramToolControl.resx">
       <DependentUpon>HistogramToolControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Interface\UserControlBase.resx">
+      <DependentUpon>UserControlBase.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -160,14 +167,14 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ROI.resx">
+    <EmbeddedResource Include="ROI\ROI.resx">
       <DependentUpon>ROI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ToolWindow.resx">
       <DependentUpon>ToolWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -183,19 +190,16 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Emgu.CV">
-      <Version>4.7.0.5276</Version>
+      <Version>4.8.0.5324</Version>
     </PackageReference>
     <PackageReference Include="Emgu.CV.Bitmap">
-      <Version>4.7.0.5276</Version>
+      <Version>4.8.0.5324</Version>
     </PackageReference>
     <PackageReference Include="Emgu.CV.runtime.windows">
-      <Version>4.7.0.5276</Version>
-    </PackageReference>
-    <PackageReference Include="Emgu.CV.runtime.windows.cuda">
-      <Version>4.7.0.5276</Version>
+      <Version>4.8.0.5324</Version>
     </PackageReference>
     <PackageReference Include="Emgu.CV.UI">
-      <Version>4.7.0.5276</Version>
+      <Version>4.8.0.5324</Version>
     </PackageReference>
     <PackageReference Include="Emgu.runtime.windows.cuda.blas.lt">
       <Version>12.0.104</Version>
@@ -208,6 +212,9 @@
     </PackageReference>
     <PackageReference Include="System.Drawing.Common">
       <Version>7.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Linq.Dynamic.Core">
+      <Version>1.3.5</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
