--- a/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
+++ b/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
@@ -207,14 +207,23 @@
     <PackageReference Include="Emgu.runtime.windows.cuda.dnn.cnn.infer">
       <Version>8.8.0</Version>
     </PackageReference>
+    <PackageReference Include="Equin.ApplicationFramework.BindingListView">
+      <Version>1.4.5222.35545</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting">
       <Version>4.7.0</Version>
+    </PackageReference>
+    <PackageReference Include="Shared.ComponentModel.SortableBindingList">
+      <Version>0.0.3</Version>
     </PackageReference>
     <PackageReference Include="System.Drawing.Common">
       <Version>7.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Linq.Dynamic.Core">
       <Version>1.3.5</Version>
+    </PackageReference>
+    <PackageReference Include="System.Management">
+      <Version>7.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
