--- a/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
+++ b/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
@@ -53,6 +53,8 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -72,6 +74,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -81,6 +84,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataContainer\AutoDisposeDict.cs" />
@@ -99,10 +105,10 @@
     <Compile Include="Caliper\CaliperToolControl.Designer.cs">
       <DependentUpon>CaliperToolControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="DisplayControl.cs">
+    <Compile Include="Display + ROI\DisplayControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="DisplayControl.Designer.cs">
+    <Compile Include="Display + ROI\DisplayControl.Designer.cs">
       <DependentUpon>DisplayControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
@@ -112,9 +118,6 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Interface\IParams.cs" />
-    <Compile Include="ROI\FrameControl.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Histogram\HistogramTool.cs" />
     <Compile Include="Histogram\HistogramToolControl.cs">
       <SubType>UserControl</SubType>
@@ -124,10 +127,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ROI\ROI.cs">
+    <Compile Include="Display + ROI\ROI.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ROI\ROI.Designer.cs">
+    <Compile Include="Display + ROI\ROI.Designer.cs">
       <DependentUpon>ROI.cs</DependentUpon>
     </Compile>
     <Compile Include="Interface\ToolBase.cs" />
@@ -137,9 +140,7 @@
     <Compile Include="ToolWindow.Designer.cs">
       <DependentUpon>ToolWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="Interface\UserControlBase.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Include="Interface\UserControlBase.cs" />
     <EmbeddedResource Include="Blob\BlobToolControl.resx">
       <DependentUpon>BlobToolControl.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -147,7 +148,7 @@
     <EmbeddedResource Include="Caliper\CaliperToolControl.resx">
       <DependentUpon>CaliperToolControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DisplayControl.resx">
+    <EmbeddedResource Include="Display + ROI\DisplayControl.resx">
       <DependentUpon>DisplayControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
@@ -169,7 +170,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ROI\ROI.resx">
+    <EmbeddedResource Include="Display + ROI\ROI.resx">
       <DependentUpon>ROI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ToolWindow.resx">
