--- a/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
+++ b/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
@@ -89,20 +89,43 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Display + ROI\ColorTools.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Display + ROI\ColorTools.Designer.cs">
+      <DependentUpon>ColorTools.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools\Blob\BlobResult.cs" />
+    <Compile Include="Tools\ImageSharpener\ImageSharpenerTool.cs" />
+    <Compile Include="Tools\ImageSharpener\ImageSharpenerToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools\ImageSharpener\ImageSharpenerToolControl.Designer.cs">
+      <DependentUpon>ImageSharpenerToolControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools\LineSegmentDetector\LineSegmentResult.cs" />
+    <Compile Include="Tools\LineSegmentDetector\LineSegmentTool.cs" />
+    <Compile Include="Tools\LineSegmentDetector\LineSegmentToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools\LineSegmentDetector\LineSegmentToolControl.Designer.cs">
+      <DependentUpon>LineSegmentToolControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools\Caliper\CaliperResult.cs" />
     <Compile Include="DataContainer\AutoDisposeDict.cs" />
     <Compile Include="DataContainer\AutoDisposeList.cs" />
-    <Compile Include="Blob\BlobTool.cs" />
-    <Compile Include="Blob\BlobToolControl.cs">
+    <Compile Include="Tools\Blob\BlobTool.cs" />
+    <Compile Include="Tools\Blob\BlobToolControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Blob\BlobToolControl.Designer.cs">
+    <Compile Include="Tools\Blob\BlobToolControl.Designer.cs">
       <DependentUpon>BlobToolControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Caliper\CaliperTool.cs" />
-    <Compile Include="Caliper\CaliperToolControl.cs">
+    <Compile Include="Tools\Caliper\CaliperTool.cs" />
+    <Compile Include="Tools\Caliper\CaliperToolControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Caliper\CaliperToolControl.Designer.cs">
+    <Compile Include="Tools\Caliper\CaliperToolControl.Designer.cs">
       <DependentUpon>CaliperToolControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Display + ROI\DisplayControl.cs">
@@ -117,14 +140,36 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Interface\IParams.cs" />
-    <Compile Include="Histogram\HistogramTool.cs" />
-    <Compile Include="Histogram\HistogramToolControl.cs">
+    <Compile Include="Tools\ColorMatcher\ColorMatcherTool.cs" />
+    <Compile Include="Tools\ColorMatcher\ColorMatchToolControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Histogram\HistogramToolControl.Designer.cs">
+    <Compile Include="Tools\ColorMatcher\ColorMatchToolControl.Designer.cs">
+      <DependentUpon>ColorMatchToolControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools\ColorExtractor\ColorExtractorTool.cs" />
+    <Compile Include="Tools\ColorExtractor\ColorExtractorToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools\ColorExtractor\ColorExtractorToolControl.Designer.cs">
+      <DependentUpon>ColorExtractorToolControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools\ImageConvert\ImageConvertTool.cs" />
+    <Compile Include="Tools\ImageConvert\ImageConvertToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools\ImageConvert\ImageConvertToolControl.Designer.cs">
+      <DependentUpon>ImageConvertToolControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Interface\IParams.cs" />
+    <Compile Include="Tools\Histogram\HistogramTool.cs" />
+    <Compile Include="Tools\Histogram\HistogramToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools\Histogram\HistogramToolControl.Designer.cs">
       <DependentUpon>HistogramToolControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interface\IToolResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Display + ROI\ROI.cs">
@@ -133,7 +178,14 @@
     <Compile Include="Display + ROI\ROI.Designer.cs">
       <DependentUpon>ROI.cs</DependentUpon>
     </Compile>
-    <Compile Include="Interface\ToolBase.cs" />
+    <Compile Include="Interface\IToolBase.cs" />
+    <Compile Include="Tools\ColorSegmentor\ColorSegmentorTool.cs" />
+    <Compile Include="Tools\ColorSegmentor\ColorSegmentorToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools\ColorSegmentor\ColorSegmentorToolControl.Designer.cs">
+      <DependentUpon>ColorSegmentorToolControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ToolWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,11 +193,22 @@
       <DependentUpon>ToolWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Interface\UserControlBase.cs" />
-    <EmbeddedResource Include="Blob\BlobToolControl.resx">
+    <Compile Include="DataContainer\ToolsTreeNode.cs" />
+    <Compile Include="yolov7ObjectDetection.cs" />
+    <EmbeddedResource Include="Display + ROI\ColorTools.resx">
+      <DependentUpon>ColorTools.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\Blob\BlobToolControl.resx">
       <DependentUpon>BlobToolControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Caliper\CaliperToolControl.resx">
+    <EmbeddedResource Include="Tools\ImageSharpener\ImageSharpenerToolControl.resx">
+      <DependentUpon>ImageSharpenerToolControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\LineSegmentDetector\LineSegmentToolControl.resx">
+      <DependentUpon>LineSegmentToolControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\Caliper\CaliperToolControl.resx">
       <DependentUpon>CaliperToolControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Display + ROI\DisplayControl.resx">
@@ -154,8 +217,17 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Histogram\HistogramToolControl.resx">
+    <EmbeddedResource Include="Tools\ColorMatcher\ColorMatchToolControl.resx">
+      <DependentUpon>ColorMatchToolControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\ColorExtractor\ColorExtractorToolControl.resx">
+      <DependentUpon>ColorExtractorToolControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\Histogram\HistogramToolControl.resx">
       <DependentUpon>HistogramToolControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\ImageConvert\ImageConvertToolControl.resx">
+      <DependentUpon>ImageConvertToolControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Interface\UserControlBase.resx">
       <DependentUpon>UserControlBase.cs</DependentUpon>
@@ -172,6 +244,9 @@
     </Compile>
     <EmbeddedResource Include="Display + ROI\ROI.resx">
       <DependentUpon>ROI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\ColorSegmentor\ColorSegmentorToolControl.resx">
+      <DependentUpon>ColorSegmentorToolControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ToolWindow.resx">
       <DependentUpon>ToolWindow.cs</DependentUpon>
@@ -211,6 +286,9 @@
     <PackageReference Include="Equin.ApplicationFramework.BindingListView">
       <Version>1.4.5222.35545</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell">
+      <Version>1.1.5</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting">
       <Version>4.7.0</Version>
     </PackageReference>
@@ -241,6 +319,33 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\play.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\convert.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\color.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\match.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-color-20.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-color-picker-20.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\color1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\folder.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\yolo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mldl.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
