--- a/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
+++ b/OpenCV - Vision Pro/OpenCV-Vision Pro.csproj
@@ -137,6 +137,27 @@
       <DependentUpon>AIForm.cs</DependentUpon>
     </Compile>
     <Compile Include="HelperClass.cs" />
+    <Compile Include="Tools\ImageProcess\ImageProcessTool.cs" />
+    <Compile Include="Tools\ImageProcess\ImageProcessToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools\ImageProcess\ImageProcessToolControl.Designer.cs">
+      <DependentUpon>ImageProcessToolControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools\ImageProcess\ProcessTool\RotateFlip.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools\ImageProcess\ProcessTool\RotateFlip.Designer.cs">
+      <DependentUpon>RotateFlip.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools\ImageProcess\ProcessTool\RotateFlipTool.cs" />
+    <Compile Include="Tools\TextRecognition\TextRecognitionTool.cs" />
+    <Compile Include="Tools\TextRecognition\TextRecognitionToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools\TextRecognition\TextRecognitionToolControl.Designer.cs">
+      <DependentUpon>TextRecognitionToolControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tools\PerspectiveTransform\PerspectiveTransformTool.cs" />
     <Compile Include="Tools\PerspectiveTransform\PerspectiveTransformToolControl.cs">
       <SubType>UserControl</SubType>
@@ -261,6 +282,15 @@
       <DependentUpon>BlobToolControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Tools\ImageProcess\ImageProcessToolControl.resx">
+      <DependentUpon>ImageProcessToolControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\ImageProcess\ProcessTool\RotateFlip.resx">
+      <DependentUpon>RotateFlip.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\TextRecognition\TextRecognitionToolControl.resx">
+      <DependentUpon>TextRecognitionToolControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tools\PerspectiveTransform\PerspectiveTransformToolControl.resx">
       <DependentUpon>PerspectiveTransformToolControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -319,6 +349,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="tessdata\chi_sim.traineddata" />
+    <None Include="tessdata\chi_tra.traineddata" />
     <None Include="tessdata\configs\alto" />
     <None Include="tessdata\configs\ambigs.train" />
     <None Include="tessdata\configs\api_config" />
@@ -464,6 +496,10 @@
     <None Include="Resources\line.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\transform.png" />
+    <None Include="Resources\polarUnwrap.png" />
+    <None Include="Resources\ocr.png" />
+    <None Include="Resources\process.png" />
     <Content Include="tessdata\jaxb-api-2.3.1.jar" />
     <Content Include="tessdata\piccolo2d-core-3.0.1.jar" />
     <Content Include="tessdata\piccolo2d-extras-3.0.1.jar" />
