--- a/OpenCV_Vision_Pro/OpenCV_Vision_Pro.csproj
+++ b/OpenCV_Vision_Pro/OpenCV_Vision_Pro.csproj
@@ -124,6 +124,11 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AITool\HandLandmarkDetection.cs" />
+    <Compile Include="AITool\HumanPoseDetection.cs" />
+    <Compile Include="Calibration.cs" />
+    <Compile Include="Interface\IAITool.cs" />
+    <Compile Include="AITool\YoloDetection.cs" />
     <Compile Include="Display + ROI\ColorTools.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -416,7 +421,7 @@
     <None Include="tessdata\tessconfigs\msdemo" />
     <None Include="tessdata\tessconfigs\nobatch" />
     <None Include="tessdata\tessconfigs\segdemo" />
-    <None Include="test.py" />
+    <None Include="PyO3DHelperClass.py" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -443,6 +448,9 @@
     <PackageReference Include="Emgu.runtime.windows.cuda.dnn.cnn.infer">
       <Version>8.8.0</Version>
     </PackageReference>
+    <PackageReference Include="Emgu.runtime.windows.cuda.rt">
+      <Version>12.0.104</Version>
+    </PackageReference>
     <PackageReference Include="Equin.ApplicationFramework.BindingListView">
       <Version>1.4.5222.35545</Version>
     </PackageReference>
@@ -452,8 +460,14 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting">
       <Version>4.7.0</Version>
     </PackageReference>
+    <PackageReference Include="Numpy">
+      <Version>3.11.1.33</Version>
+    </PackageReference>
     <PackageReference Include="OpenCvSharp4.Windows">
       <Version>4.8.0.20230708</Version>
+    </PackageReference>
+    <PackageReference Include="pythonnet">
+      <Version>3.0.3</Version>
     </PackageReference>
     <PackageReference Include="Shared.ComponentModel.SortableBindingList">
       <Version>0.0.3</Version>
@@ -464,6 +478,9 @@
     <PackageReference Include="System.Drawing.Common">
       <Version>7.0.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Dynamic.Runtime">
+      <Version>4.3.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Linq.Dynamic.Core">
       <Version>1.3.5</Version>
     </PackageReference>
@@ -472,6 +489,9 @@
     </PackageReference>
     <PackageReference Include="Tesseract">
       <Version>5.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="TorchSharp-cuda-windows">
+      <Version>0.101.1</Version>
     </PackageReference>
     <PackageReference Include="ZXing.Net">
       <Version>0.16.9</Version>
@@ -529,11 +549,15 @@
     <None Include="Resources\line.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\3d.png" />
+    <Content Include="PythonGUI.py" />
+    <Content Include="testSIFT.py" />
     <None Include="Resources\transform.png" />
     <None Include="Resources\polarUnwrap.png" />
     <None Include="Resources\ocr.png" />
     <None Include="Resources\process.png" />
     <None Include="Resources\id.png" />
+    <Content Include="MiDaS23D.py" />
     <Content Include="tessdata\jaxb-api-2.3.1.jar" />
     <Content Include="tessdata\piccolo2d-core-3.0.1.jar" />
     <Content Include="tessdata\piccolo2d-extras-3.0.1.jar" />
