Image Blending Tool

--- a/OpenCV_Vision_Pro/OpenCV_Vision_Pro.csproj
+++ b/OpenCV_Vision_Pro/OpenCV_Vision_Pro.csproj
@@ -170,6 +170,13 @@
     <Compile Include="Tools\ImageProcess\ProcessTool\ArithmeticTool\ArithmeticToolControl.Designer.cs">
       <DependentUpon>ArithmeticToolControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Tools\ImageBlending\ImageBlendingTool.cs" />
+    <Compile Include="Tools\ImageBlending\ImageBlendingToolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools\ImageBlending\ImageBlendingToolControl.Designer.cs">
+      <DependentUpon>ImageBlendingToolControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tools\ImageStitching\ImageStitchingTool.cs" />
     <Compile Include="Tools\ImageStitching\ImageStitchingToolControl.cs">
       <SubType>UserControl</SubType>
@@ -339,6 +346,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Tools\ImageProcess\ProcessTool\ArithmeticTool\ArithmeticToolControl.resx">
       <DependentUpon>ArithmeticToolControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\ImageBlending\ImageBlendingToolControl.resx">
+      <DependentUpon>ImageBlendingToolControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Tools\ImageStitching\ImageStitchingToolControl.resx">
       <DependentUpon>ImageStitchingToolControl.cs</DependentUpon>
